[gd_scene load_steps=5 format=2]

[ext_resource path="res://scripts/Quitable.gd" type="Script" id=1]
[ext_resource path="res://sprites/d_daok_edificios_strip25.png" type="Texture" id=4]

[sub_resource type="CircleShape2D" id=1]
radius = 15.0333

[sub_resource type="CircleShape2D" id=2]
radius = 36.0139

[node name="Arbol" type="Node2D" groups=["arbol", "quitable", "vegetal"]]
script = ExtResource( 1 )
__meta__ = {
"_edit_lock_": true
}

[node name="Solido" type="Area2D" parent="."]
collision_mask = 0
input_pickable = false
monitoring = false
__meta__ = {
"_edit_lock_": true
}

[node name="Coli" type="CollisionShape2D" parent="Solido"]
shape = SubResource( 1 )
__meta__ = {
"_edit_lock_": true
}

[node name="Quitable" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 129
input_pickable = false
monitoring = false
__meta__ = {
"_edit_lock_": true
}

[node name="Coli" type="CollisionShape2D" parent="Quitable"]
shape = SubResource( 2 )
__meta__ = {
"_edit_lock_": true
}

[node name="Imagen" type="Node2D" parent="." groups=["imagen"]]
__meta__ = {
"_edit_lock_": true
}

[node name="Frente" type="Sprite" parent="Imagen"]
texture = ExtResource( 4 )
centered = false
offset = Vector2( -149, -185 )
hframes = 25
frame = 24
__meta__ = {
"_edit_lock_": true
}

[node name="Fin1" type="Node2D" parent="."]
__meta__ = {
"_edit_lock_": true
}

[connection signal="tree_exiting" from="." to="." method="_on_Arbol_tree_exiting"]
[connection signal="area_entered" from="Quitable" to="." method="_on_Quitable_area_entered"]
